--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Package to make your chart smoother",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Murilo-Luciano/chart-smoother/issues"
   },
-  "homepage": "https://github.com/Murilo-Luciano/chart-smoother#readme"
+  "homepage": "https://github.com/Murilo-Luciano/chart-smoother#readme",
+  "devDependencies": {
+    "jest": "^29.4.3"
+  }
 }
