--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "jest": "^29.4.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
   "types": "lib/index.d.ts",
